--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/slyles.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="screen and (min width:768px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="screen and (min width:1200px)">
 </head>
 <body class="body">
     <!-- Top Line -->
-    <header class="page-header main-nav">
+    <!-- <header class="page-header main-nav">
         <div class="container main-nav">
-            <nav class="nav main-nav">
-                <!-- Logo -->
-                <a class="logo-up link" href="./index.html">Web<span class="logo-accent">Studio</span></a>
-                <!-- Menu Nav -->
+            <nav class="nav main-nav">                
+                <a class="logo-up link" href="./index.html">Web<span class="logo-accent">Studio</span></a>            
                 <ul class="list main-nav">
                     <li class="nav-title">
                         <a class="navigation current-link link" href="./index.html">Studio</a>
@@ -41,7 +41,7 @@
                 </ul>
             </address>
         </div>
-    </header>
+    </header> -->
     <main>
         <!-- Hero -->
         <section class="hero section">
@@ -54,7 +54,7 @@
         </section>
 
         <!-- advantages -->
-        <section class="advantages section2">
+        <!-- <section class="advantages section2">
             <div class="container">
                 <h2 class="visually-hidden">Advantages</h2>
                 <ul class="adnvantage-list">
@@ -100,9 +100,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- gallery -->
-        <section class="gallery section">
+        <!-- <section class="gallery section">
             <div class="container">
                 <h2 class="galery-title">What are we doing</h2>
                 <ul class="section-gallery">
@@ -117,9 +117,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- our team -->
-        <section class="team-section section">
+        <!-- <section class="team-section section">
            <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="section3">
@@ -257,8 +257,8 @@
                     </li>
                 </ul>
            </div>
-        </section>
-        <section class="customers">
+        </section> -->
+        <!-- <section class="customers">
             <div class="container">
                 <h2 class="subtitle">Customers</h2>        
                 <ul class="list flex-list">
@@ -306,10 +306,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-box">
             <div>
                 <a class="logo-down link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
@@ -360,7 +360,7 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
