--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,13 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/slyles.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width:768px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width:1200px)">
 </head>
 
 <body class="body">
     <!-- Top Line -->
-<header class="page-header main-nav">
+<header class="header">
     <div class="container main-nav">
         <nav class="nav main-nav">
             <!-- Logo -->
