--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         </button>
         </div>
         <div class="mob-menu is-hidden" data-menu>
-            <button class="modal-close" type="button" data-menu-close>
+            <button class="mob-close" type="button" data-menu-close>
                 <svg class="close-btn" width="8" height="8">
-                    <use href="./images/icons.svgicon-close-icon"></use>
+                    <use href="./images/icons.svg#icon-close-icon"></use>
                 </svg>
             </button>
         
             <ul class="mob-menu-list">
                 <li class="mob-menu-item">
-                    <a href="#" class="mob-menu-link current">Studio</a>
+                    <a href="#" class="mob-menu-link current-link">Studio</a>
                 </li>
                 <li class="mob-menu-item">
                     <a href="./portfolio.html" class="mob-menu-link">Portfolio</a>
                 </li>
-                <li class="mob-menu-item">
+                <li class="mob-menu-item current">
                     <a href="#" class="mob-menu-link">Contacts</a>
                 </li>
             </ul>
@@ -75,30 +75,30 @@
             </ul>
         
             <ul class="mob-social social">
-                <li class="social-item">
-                    <a href="#" class="link-social">
-                        <svg class="mobile-icon">
+                <li class="team-soc-item">
+                    <a href="#" class="team-soc-link">
+                        <svg width="24" height="24" class="mobile-icon">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-item">
-                    <a href="#" class="link-social">
-                        <svg class="icon-social icon-footer">
+                <li class="team-soc-item">
+                    <a href="#" class="team-soc-link">
+                        <svg width="24" height="24" class="mobile-icon">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-item">
-                    <a href="#" class="link-social">
-                        <svg class="icon-social icon-footer">
+                <li class="team-soc-item">
+                    <a href="#" class="team-soc-link">
+                        <svg width="24" height="24" class="mobile-icon">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-item">
-                    <a href="#" class="link-social">
-                        <svg class="icon-social icon-footer">
+                <li class="team-soc-item">
+                    <a href="#" class="team-soc-link">
+                        <svg width="24" height="24" class="mobile-icon">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -111,54 +111,54 @@
         <section class="hero section">
             <div class="container">
              <h1 class="hero-title">
-            Effective Solutions<br />for Your Business
+            Effective Solutions for Your Business
              </h1>
                 <button class="hero-btn" data-modal-open type="button">Order Service</button>
             </div>
         </section>
 
         <!-- advantages -->
-        <section class="advantages section2">
+        <section class="advantages">
             <div class="container">
                 <h2 class="visually-hidden">Advantages</h2>
-                <ul class="adnvantage-list">
-                    <li class="feature">
+                <ul class="advantage-list">
+                    <li class="list-item feature">
                         <div class="feature-icon-location">
                             <svg class="feature-icon">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-title">Strategy</h3>
+                        <h3 class="advantages-title mobil-list-title">Strategy</h3>
                         <p class="advantages-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
-                    <li class="feature">
+                    <li class="list-item feature">
                         <div class="feature-icon-location">
                 <svg class="feature-icon">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-                        <h3 class="advantages-title">Punctuality</h3>
+                        <h3 class="advantages-title mobil-list-title">Punctuality</h3>
                         <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible
                             time.</p>
                     </li>
-                    <li class="feature">
+                    <li class="list-item feature">
                         <div class="feature-icon-location">
                 <svg class="feature-icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-                        <h3 class="advantages-title">Diligence</h3>
+                        <h3 class="advantages-title mobil-list-title">Diligence</h3>
                         <p class="advantages-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                             risk.</p>
                     </li>
-                    <li class="feature">
+                    <li class="list-item feature">
                         <div class="feature-icon-location">
                 <svg class="feature-icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-                        <h3 class="advantages-title">Technologies</h3>
+                        <h3 class="advantages-title mobil-list-title">Technologies</h3>
                         <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for
                             problem-solving.</p>
                     </li>
@@ -166,7 +166,7 @@
             </div>
         </section>
         <!-- gallery -->
-        <!-- <section class="gallery section">
+        <section class="gallery section">
             <div class="container">
                 <h2 class="galery-title">What are we doing</h2>
                 <ul class="section-gallery">
@@ -181,12 +181,12 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- our team -->
-        <!-- <section class="team-section section">
+       <section class="team-section section">
            <div class="container">
                 <h2 class="team-title">Our Team</h2>
-                <ul class="section3">
+                <ul class="team-list section3">
                     <li class="team-title-list">
                         <img class="team-card-photo" src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="team-wrap">
@@ -321,11 +321,11 @@
                     </li>
                 </ul>
            </div>
-        </section> -->
-        <!-- <section class="customers">
+        </section> 
+        <section class="customers">
             <div class="container">
                 <h2 class="subtitle">Customers</h2>        
-                <ul class="list flex-list">
+                <ul class="flex-list">
                     <li class="customers-item">
                         <a href="#" class="customers-link">
                             <svg class="svg-link">
@@ -373,9 +373,9 @@
         </section> -->
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer">
+     <footer class="footer">
         <div class="container footer-box">
-            <div>
+            <div class="footer-content">
                 <a class="logo-down link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
@@ -424,7 +424,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
@@ -477,8 +477,8 @@
             </form>
         </div>
     </div>
-    <script src="./js/modal.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js" type="module"></script>
+    <script src="./js/menu.js" type="module"></script>
 </body>
 
 </html>
