--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- Footer -->
      <footer class="footer">
