--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                 <h2 class="galery-title">What are we doing</h2>
                 <ul class="section-gallery">
                     <li class="section-photo">
-                        <img src="./images/computer.jpg" alt="computer with opened projectc" width="360" height="300" />
+                        <img srcset="./images/computer.jpg 1x, ./images/comuter2.jpg 2x" src="./images/computer.jpg" alt="computer with opened projectc" width="360" height="300" />
                     </li>
                     <li class="section-photo">
-                        <img src="./images/phoneapp.jpg" alt="phone application" width="360" height="300" />
+                        <img srcset="./images/phoneapp.jpg 1x, ./images/phone-app2.jpg 2x " src="./images/phoneapp.jpg" alt="phone application" width="360" height="300" />
                     </li>
                     <li class="section-photo">
-                        <img src="./images/webpage.jpg" alt="mobile version of web page" width="360" height="300" />
+                        <img srcset="./images/webpage.jpg 1x, ./images/webpage2.jpg 2x" src="./images/webpage.jpg" alt="mobile version of web page" width="360" height="300" />
                     </li>
                 </ul>
             </div>
@@ -188,7 +188,7 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list section3">
                     <li class="team-title-list">
-                        <img class="team-card-photo" src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        <img class="team-card-photo" srcset="./images/team/mark.jpg 1x, ./images/team/mark2.jpg 2x" src="./images/team/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="team-wrap">
                             <h3 class="name">Mark Guerrero</h3>
                             <p class="job">Product Designer</p>
@@ -221,7 +221,7 @@
                         </div >
                     </li>
                     <li class="team-title-list">
-                        <img class="team-card-photo" src="./images/team/tom.jpg" alt="Tom Form" width="264" height="260" />
+                        <img class="team-card-photo" srcset="./images/team/tom.jpg 1x, ./images/team/tom2.jpg 2x" src="./images/team/tom.jpg" alt="Tom Form" width="264" height="260" />
                         <div class="team-wrap">
                             <h3 class="name">Tom Ford</h3>
                             <p class="job">Frontend Developer</p>
@@ -254,7 +254,7 @@
                         </div >
                     </li>
                     <li class="team-title-list">
-                        <img class="team-card-photo" src="./images/team/camila.jpg" alt="Camila Garcia" width="264" height="260" />
+                        <img class="team-card-photo" srcset="./images/team/camila.jpg 1x, ./images/team/camila2.jpg 2x" src="./images/team/camila.jpg" alt="Camila Garcia" width="264" height="260" />
                         <div class="team-wrap">
                             <h3 class="name">Camila Garcia</h3>
                             <p class="job">Marketing</p>
@@ -287,7 +287,7 @@
                         </div >
                     </li>
                     <li class="team-title-list">
-                        <img class="team-card-photo" src="./images/team/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        <img class="team-card-photo" srcset="./images/team/daniel.jpg 1x, ./images/team/daniel2.jpg 2x" src="./images/team/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <div class="team-wrap">
                             <h3 class="name">Daniel Wilson</h3>
                             <p class="job">UI Designer</p>
