--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
             </div>
         </section>
         <!-- gallery -->
-        <section class="gallery section">
+        <section class="gallery section-g">
             <div class="container">
                 <h2 class="galery-title">What are we doing</h2>
                 <ul class="section-gallery">
                     <li class="section-photo">
-                        <img srcset="./images/computer.jpg 1x, ./images/comuter2.jpg 2x" src="./images/computer.jpg" alt="computer with opened projectc" width="360" height="300" />
+                        <img srcset="./images/computer.jpg 1x, ./images/computer2.jpg 2x" src="./images/computer.jpg" alt="computer with opened projectc" width="360" height="300" />
                     </li>
                     <li class="section-photo">
                         <img srcset="./images/phoneapp.jpg 1x, ./images/phone-app2.jpg 2x " src="./images/phoneapp.jpg" alt="phone application" width="360" height="300" />
