--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
 </header>
     <!-- Main-section -->
     <main>
-        <section class="section">
+        <section class="section section-portfolio">
             <div class="container">
                 <h1 hidden>Our products</h1>
                 <!--Button-section-->
