--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </section>
         <!-- our team -->
-       <section class="team-section section">
+       <section class="team-section section section-t">
            <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list section3">
